fix(backend): configure CORS for Vercel production frontend and allow OPTIONS requests